Add input button to upload local IFC files

--- a/examples/js/index.html
+++ b/examples/js/index.html
@@ -11,6 +11,7 @@
     <title>Document</title>
   </head>
   <body>
+    <input readonly type="file" id="openFileDialog" />
     <canvas id="threeCanvas"></canvas>
     <script type="module" src="web-ifc-scene.js"></script>
   </body>
