--- a/examples/jsm/index.html
+++ b/examples/jsm/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
+    <input readonly type="file" id="openFileDialog" />
     <canvas id="threeCanvas"></canvas>
     <script type="module" src="bundle.js"></script>
   </body>
