--- a/example/index.html
+++ b/example/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" type="text/css" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>75 lines</title>
   </head>
   <body>
     <input readonly type="file" id="openFileDialog" />
