--- a/example/index.html
+++ b/example/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>75 lines</title>
+    <title>IFC.js</title>
   </head>
   <body>
     <input readonly type="file" id="openFileDialog" />
