--- a/example/index.html
+++ b/example/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <input readonly type="file" id="openFileDialog" />
+    <button id="close-button">Close</button>
     <canvas id="threeCanvas"></canvas>
     <script type="module" src="bundle.js"></script>
   </body>
