add utilities function to IFCManager, and Sequence Data Class (#91)
* add utilities function to IFCManager, and Sequence Data Class

* add IFC2JSGANTT utilities for displaying gantt data

* Delete index.html

error in commit

* fixed

* attempt to merge again

* changes staged

* fix last commit on IfcManager.ts comments

--- a/example/index.html
+++ b/example/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <input readonly type="file" id="openFileDialog" />
-    <canvas id="threeCanvas"></canvas>
+    <canvas id="threeCanvas"></canvas>\
+    <p style="padding-left: 150px;">Hello World</p>
+    <a id ="test-button" class="button4" style="background-color:#a79e1cef">TEST</a>
     <script type="module" src="bundle.js"></script>
   </body>
 </html>
