--- a/example/index.html
+++ b/example/index.html
@@ -9,7 +9,13 @@
     <title>IFC.js</title>
   </head>
   <body>
-    <input readonly type="file" id="openFileDialog" />
+    <div id="input-container">
+      <input readonly type="file" id="openFileDialog" />
+      <div>
+        <label for="useFragment"> Use fragments </label>
+        <input type="checkbox" id="useFragment" />
+      </div>
+    </div>
     <canvas id="threeCanvas"></canvas>\
     <p style="padding-left: 150px;">Hello World</p>
     <a id ="test-button" class="button4" style="background-color:#a79e1cef">TEST</a>
